--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <header><a href="#"><h1>AEM Importer</h1></a></header>
             <nav>
                 <sp-sidenav defaultValue="import.html">
+                    <sp-sidenav-item value="import-manual-mapping.html" label="Import - Mapping"></sp-sidenav-item>
                     <sp-sidenav-item value="import.html" label="Import - Workbench" selected></sp-sidenav-item>
                     <sp-sidenav-item value="import-bulk.html" label="Import - Bulk"></sp-sidenav-item>
-                    <sp-sidenav-item value="import-manual-mapping.html" label="Import - Manual Mapping"></sp-sidenav-item>
                     <sp-sidenav-item value="crawl.html" label="Crawl"></sp-sidenav-item>
                     <sp-sidenav-item value="inspect.html" label="Eyedropper"></sp-sidenav-item>
                 </sp-sidenav>
