feat: Express Transformations
- introduce express transformation option
- automatically generate transformation file from current mapping

--- a/import-express.html
+++ b/import-express.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Import - Manual Mapping Tool</title>
+    <title>Import - Express Transformations</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/import/import.css" />
 
@@ -31,10 +31,10 @@
     <sp-theme color="dark" scale="medium">
         <main>
             <!-- IMPORT SECTION -->
-            <section class="import">
+            <section class="import import-express">
                 <div class="section-title">
-                    <h2>Import - Section Mapping</h2>
-                    <p>Map page sections to existing blocks.</p>
+                    <h2>Import - Express</h2>
+                    <p>Express import a site using section mapping.</p>
                     <sp-divider size="l"></sp-divider>
                 </div>
                 <div class="section-cols">
@@ -48,11 +48,14 @@
                             <sp-accordion>
                                 <sp-accordion-item label="Load Options">
                                     <div>
-                                        <sp-field-label for="import-file-url" required>Transformation file URL</sp-field-label>
-                                        <sp-textfield class="option-field locked" id="import-file-url" type="url" value="http://localhost:3001/tools/importer/helix-importer-ui/js/sections-mapping/sections-mapping.import.js" disabled></sp-textfield>
-
                                         <sp-field-label for="import-pageload-timeout">Page load timeout</sp-field-label>
                                         <sp-number-field class="option-field" id="import-pageload-timeout" value="100" min="0" step="100" format-options='{ "style": "unit", "unit": "millisecond", "unitDisplay": "short" }'></sp-number-field>
+
+                                        <div class="local-save">
+                                            <sp-checkbox class="option-field" id="import-local-docx" checked>
+                                                Save as docx
+                                            </sp-checkbox>
+                                        </div>
 
                                         <sp-checkbox class="option-field" id="import-enable-js">
                                             Enable JavaScript
@@ -73,19 +76,21 @@
 
                             <sp-button-group>
                                 <sp-button id="detect-sections-button">Detect Sections</sp-button>
-                                <sp-button id="save-transformation-button">Save</sp-button>
+                                <sp-button id="import-doimport-button">Import</sp-button>
                             </sp-button-group>
                         </form>
                         <span id="folder-name"></span>
                         <div class="page-preview hidden">
                             <sp-divider size="s"></sp-divider>
                             <h3>Page preview</h3>
-                            <iframe id="import-content-frame"></iframe>
+                            <iframe id="import-content-frame" frameborder="0"></iframe>
                         </div>
                     </div>
                     <div class="section-col">
                         <sp-tabs selected="mapping-editor">
                             <sp-tab label="Mapping" value="mapping-editor"></sp-tab>
+                            <sp-tab label="Preview" value="import-preview"></sp-tab>
+                            <sp-tab label="Transformation" value="import-transform"></sp-tab>
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
@@ -102,7 +107,23 @@
                                     </div>
                                 </sp-theme>
                             </sp-tab-panel>
+                            <sp-tab-panel value="import-preview">
+                                <sp-theme color="light" scale="medium">
+                                    <div id="import-markdown-preview"></div>
+                                </sp-theme>
+                            </sp-tab-panel>
+                            <sp-tab-panel value="import-transform">
+                                <div data-panel="source">
+                                    <div class="code">
+                                        <textarea id="import-transform-source" rows="4" cols="10"></textarea>
+                                    </div>
+                                </div>
+                            </sp-tab-panel>
                         </sp-tabs>
+                        <sp-button-group>
+                            <sp-button id="import-downloadImportReport" class="hidden">Download import report</sp-button>
+                            <sp-button id="import-downloadTransformation">Export transformation</sp-button>
+                        </sp-button-group>
                     </div>
                 </div>
             </section>
