--- a/import-express.html
+++ b/import-express.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Import - Manual Mapping Tool</title>
+    <title>Import - Express Transformations</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/import/import.css" />
 
@@ -23,22 +23,18 @@
     <script src="./js/libs/vendors/detect/detect.min.js" type="module"></script>
 
     <script src="./js/dist/helix-importer.js"></script>
-
     <script src="./js/import/import.ui.js" type="module"></script>
 
-    <script>
-        localStorage.setItem('option-field-import-file-url', 'http://localhost:3001/tools/importer/helix-importer-ui/js/sections-mapping/sections-mapping.import.js');
-    </script>
 </head>
 
 <body class="tool">
     <sp-theme color="dark" scale="medium">
         <main>
             <!-- IMPORT SECTION -->
-            <section class="import">
+            <section class="import import-express">
                 <div class="section-title">
-                    <h2>Import - Manual Mapping</h2>
-                    <p>Manually map page sections to existing block.</p>
+                    <h2>Import - Express</h2>
+                    <p>Express import a site using section mapping.</p>
                     <sp-divider size="l"></sp-divider>
                 </div>
                 <div class="section-cols">
@@ -52,21 +48,12 @@
                             <sp-accordion>
                                 <sp-accordion-item label="Load Options">
                                     <div>
-                                        <sp-field-label for="import-file-url" required>Transformation file URL</sp-field-label>
-                                        <sp-textfield class="option-field" id="import-file-url" type="url" value="http://localhost:3001/tools/importer/helix-importer-ui/js/sections-mapping/sections-mapping.import.js" disabled></sp-textfield>
-
                                         <sp-field-label for="import-pageload-timeout">Page load timeout</sp-field-label>
                                         <sp-number-field class="option-field" id="import-pageload-timeout" value="100" min="0" step="100" format-options='{ "style": "unit", "unit": "millisecond", "unitDisplay": "short" }'></sp-number-field>
 
                                         <div class="local-save">
                                             <sp-checkbox class="option-field" id="import-local-docx" checked>
                                                 Save as docx
-                                            </sp-checkbox>
-                                            <sp-checkbox class="option-field" id="import-local-html">
-                                                Save as HTML
-                                            </sp-checkbox>
-                                            <sp-checkbox class="option-field" id="import-local-md">
-                                                Save as Markdown
                                             </sp-checkbox>
                                         </div>
 
@@ -103,8 +90,7 @@
                         <sp-tabs selected="mapping-editor">
                             <sp-tab label="Mapping" value="mapping-editor"></sp-tab>
                             <sp-tab label="Preview" value="import-preview"></sp-tab>
-                            <sp-tab label="Markdown" value="import-markdown"></sp-tab>
-                            <sp-tab label="HTML" value="import-html"></sp-tab>
+                            <sp-tab label="Transformation" value="import-transform"></sp-tab>
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
@@ -126,23 +112,17 @@
                                     <div id="import-markdown-preview"></div>
                                 </sp-theme>
                             </sp-tab-panel>
-                            <sp-tab-panel value="import-markdown">
+                            <sp-tab-panel value="import-transform">
                                 <div data-panel="source">
                                     <div class="code">
-                                        <textarea id="import-markdown-source" rows="4" cols="10"></textarea>
-                                    </div>
-                                </div>
-                            </sp-tab-panel>
-                            <sp-tab-panel value="import-html">
-                                <div data-panel="source">
-                                    <div class="code">
-                                        <textarea id="import-transformed-html" rows="4" cols="10"></textarea>
+                                        <textarea id="import-transform-source" rows="4" cols="10"></textarea>
                                     </div>
                                 </div>
                             </sp-tab-panel>
                         </sp-tabs>
                         <sp-button-group>
                             <sp-button id="import-downloadImportReport" class="hidden">Download import report</sp-button>
+                            <sp-button id="import-downloadTransformation">Export transformation</sp-button>
                         </sp-button-group>
                     </div>
                 </div>
@@ -153,3 +133,4 @@
 </body>
 
 </html>
+`
