Convenience of opening URL

--- a/import-express.html
+++ b/import-express.html
@@ -48,8 +48,8 @@
                                         <sp-help-text slot="negative-help-text">Please enter a valid URL.</sp-help-text>
                                     </sp-textfield>
                                 </div>
-                                <sp-button id="express-open-url-button" title="Open URL in new tab.">
-                                    <sp-icon-open-in>Open</sp-icon-open-in>
+                                <sp-button id="express-open-url-button" title="Open URL in new tab">
+                                    <sp-icon-link-out>Open</sp-icon-link-out>
                                 </sp-button>
                             </div>
                             <sp-accordion>
