Convenience of opening URL

--- a/import-express.html
+++ b/import-express.html
@@ -48,7 +48,7 @@
                                         <sp-help-text slot="negative-help-text">Please enter a valid URL.</sp-help-text>
                                     </sp-textfield>
                                 </div>
-                                <sp-button id="express-open-url-button" title="Open URL in new tab">
+                                <sp-button id="express-open-url-button" variant="secondary" title="Open URL in new tab" icon-only>
                                     <sp-icon-link-out>Open</sp-icon-link-out>
                                 </sp-button>
                             </div>
