--- a/import-express.html
+++ b/import-express.html
@@ -103,9 +103,8 @@
                                 <sp-theme color="light" scale="medium">
                                     <div id="mapping-editor">
                                         <div class="row">
-                                            <h2 id="sec-color">Color</h2>
-                                            <h2 id="sec-dom-selector">Id/Classes</h2>
-                                            <h2 id="sec-layout">Layout<br />(cols x rows)</h2>
+                                            <h2 id="sec-color">&nbsp;</h2>
+                                            <h2 id="sec-dom-selector">Selector</h2>
                                             <h2>Mapping</h2>
                                             <h2>&nbsp;</h2>
                                         </div>
@@ -129,7 +128,7 @@
                         </sp-tabs>
                         <sp-button-group>
                             <sp-button id="import-downloadImportReport" class="hidden">Download import report</sp-button>
-                            <sp-button id="import-downloadTransformation">Export transformation</sp-button>
+                            <sp-button id="import-downloadTransformation">Download transformation</sp-button>
                         </sp-button-group>
                     </div>
                 </div>
