--- a/import-express.html
+++ b/import-express.html
@@ -7,6 +7,7 @@
     <title>Import - Express Transformations</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/import/import.css" />
+    <link rel="stylesheet" href="./css/import/import-express-customization.css" />
 
     <script src="./js/shared/log.js"></script>
     <script src="./js/dist/spectrum-web-components.js"></script>
@@ -96,19 +97,42 @@
                     <div class="section-col">
                         <sp-tabs selected="mapping-editor">
                             <sp-tab label="Mapping" value="mapping-editor"></sp-tab>
+                            <sp-tab label="Customization" value="block-customization"></sp-tab>
                             <sp-tab label="Preview" value="import-preview"></sp-tab>
                             <sp-tab label="Transformation" value="import-transform"></sp-tab>
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
                                     <div id="mapping-editor">
-                                        <div class="row">
+                                        <h2 id="mapping-click-detection-prompt">Click 'Detect Sections' to activate 'Customization' configuration.</h2>
+                                        <div class="row header hidden">
                                             <h2 id="sec-color">&nbsp;</h2>
                                             <h2 id="sec-dom-selector">Selector</h2>
                                             <h2>Mapping</h2>
                                             <h2>&nbsp;</h2>
                                         </div>
                                         <div id="mapping-editor-sections">
+                                        </div>
+                                    </div>
+                                </sp-theme>
+                            </sp-tab-panel>
+                            <sp-tab-panel value="block-customization">
+                                <sp-theme color="light" scale="medium">
+                                    <div id="metadata-editor">
+                                        <h2 id="metadata-click-detection-prompt">Click 'Detect Sections' to activate 'Customization' configuration.</h2>
+                                        <div class="heading hidden">
+                                            <h1>Metadata Mappings</h1>
+                                            <p>Add metadata block name/value pairs and the selector that the import should match to trigger their addition to the current import.</p>
+                                        </div>
+                                        <div id="metadata-editor-rows">
+                                            <div class="row header hidden">
+                                                <h2>Name</h2>
+                                                <h2>Value</h2>
+                                                <h2>Condition</h2>
+                                                <sp-button id="metadata-editor-add" variant="accent">
+                                                    <sp-icon-add-circle slot="icon"></sp-icon-add-circle>
+                                                </sp-button>
+                                            </div>
                                         </div>
                                     </div>
                                 </sp-theme>
