--- a/import-express.html
+++ b/import-express.html
@@ -104,7 +104,7 @@
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
                                     <div id="mapping-editor">
-                                        <h2 id="mapping-click-detection-prompt">Click 'Detect Sections' to activate 'Customization' configuration.</h2>
+                                        <h2 id="mapping-click-detection-prompt">Click 'Detect Sections' to activate 'Mapping' management.</h2>
                                         <div class="row header hidden">
                                             <h2 id="sec-color">&nbsp;</h2>
                                             <h2 id="sec-dom-selector">Selector</h2>
