Metadata - Customizations - reposition 'add' button and use spectrum tooltips

--- a/import-express.html
+++ b/import-express.html
@@ -129,11 +129,14 @@
                                                 <h2>Name</h2>
                                                 <h2>Value</h2>
                                                 <h2>Condition</h2>
-                                                <sp-button id="metadata-editor-add" variant="accent">
-                                                    <sp-icon-add-circle slot="icon"></sp-icon-add-circle>
-                                                </sp-button>
                                             </div>
                                         </div>
+                                        <sp-button id="metadata-editor-add" class="hidden" variant="accent">
+                                            <sp-icon-add-circle slot="icon"></sp-icon-add-circle>
+                                            <sp-tooltip self-managed>
+                                                Add a metadata row
+                                            </sp-tooltip>
+                                        </sp-button>
                                     </div>
                                 </sp-theme>
                             </sp-tab-panel>
