feat: [Importer] Block config custom mappings
- include block customizations from mappings when building the import ruleset

--- a/import-express.html
+++ b/import-express.html
@@ -104,7 +104,7 @@
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
                                     <div id="mapping-editor">
-                                        <h2 id="mapping-click-detection-prompt">Click 'Detect Sections' to activate 'Mapping' management.</h2>
+                                        <h2 id="mapping-click-detection-prompt">Run section detection to activate mapping management.</h2>
                                         <div class="row header hidden">
                                             <h2 id="sec-color">&nbsp;</h2>
                                             <h2 id="sec-dom-selector">Selector</h2>
@@ -119,7 +119,7 @@
                             <sp-tab-panel value="block-customization">
                                 <sp-theme color="light" scale="medium">
                                     <div id="metadata-editor">
-                                        <h2 id="metadata-click-detection-prompt">Click 'Detect Sections' to activate 'Customization' configuration.</h2>
+                                        <h2 id="metadata-click-detection-prompt">Run section detection to activate customizations.</h2>
                                         <div class="heading hidden">
                                             <h1>Metadata Mappings</h1>
                                             <p>Add metadata block name/value pairs and the selector that the import should match to trigger their addition to the current import.</p>
@@ -131,7 +131,7 @@
                                                 <h2>Condition</h2>
                                             </div>
                                         </div>
-                                        <sp-button id="metadata-editor-add" class="hidden" variant="accent">
+                                        <sp-button id="metadata-editor-add" class="hidden" variant="accent" icon-only>
                                             <sp-icon-add-circle slot="icon"></sp-icon-add-circle>
                                             <sp-tooltip self-managed>
                                                 Add a metadata row
