feat: Support hubble homes imports
- allow text nodes to be targeted
- allow attribute values to be targeted
- allow search and replace on text values

--- a/import-express.html
+++ b/import-express.html
@@ -102,7 +102,7 @@
                             <sp-tab label="Mapping" value="mapping-editor"></sp-tab>
                             <sp-tab label="Customization" value="block-customization"></sp-tab>
                             <sp-tab label="Preview" value="import-preview"></sp-tab>
-                            <sp-tab label="Transformation" value="import-transform"></sp-tab>
+                            <sp-tab label="Rules" value="import-transform"></sp-tab>
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
@@ -159,7 +159,7 @@
                         </sp-tabs>
                         <sp-button-group>
                             <sp-button id="import-downloadImportReport" class="hidden">Download import report</sp-button>
-                            <sp-button id="import-downloadTransformation">Download transformation</sp-button>
+                            <sp-button id="import-downloadTransformation">Download rules</sp-button>
                         </sp-button-group>
                     </div>
                 </div>
