Variants - clean up 'customization' association - fix 'baseTransformRules' error

--- a/import-express.html
+++ b/import-express.html
@@ -123,7 +123,6 @@
                             <sp-tab-panel value="block-customization">
                                 <sp-tabs selected="metadata-editor-view" id="customization-editor-tabs">
                                     <sp-tab label="Metadata" value="metadata-editor-view"></sp-tab>
-                                    <!--<sp-tab label="Variants" value="variant-editor-view"></sp-tab>-->
                                     <sp-tab-panel value="metadata-editor-view">
                                         <sp-theme color="light" scale="medium">
                                             <div id="metadata-editor" class="customization-editor">
@@ -148,32 +147,7 @@
                                                 </sp-button>
                                             </div>
                                         </sp-theme>
-                                    </sp-tab-panel><!--
-                                    Backup the Variant's view (in case it or something like it comes back)
-                                    <sp-tab-panel value="variant-editor-view">
-                                        <sp-theme color="light" scale="medium">
-                                            <div id="variant-editor" class="customization-editor">
-                                                <h2 class="customization-click-detection-prompt">Run section detection to activate variant customizations.</h2>
-                                                <div class="heading hidden">
-                                                    <h1>Variant Mappings</h1>
-                                                    <p>Add block variant name and the selector to indicate when the variant should be added to the matching block.</p>
-                                                </div>
-                                                <div id="variant-editor-rows">
-                                                    <div class="row header hidden">
-                                                        <h2>Value</h2>
-                                                        <h2>Condition</h2>
-                                                        <div class="icon-aligner"></div>
-                                                    </div>
-                                                </div>
-                                                <sp-button id="variant-editor-add" class="hidden" variant="accent" icon-only>
-                                                    <sp-icon-add-circle slot="icon"></sp-icon-add-circle>
-                                                    <sp-tooltip self-managed>
-                                                        Add a variant row
-                                                    </sp-tooltip>
-                                                </sp-button>
-                                            </div>
-                                        </sp-theme>
-                                    </sp-tab-panel>-->
+                                    </sp-tab-panel>
                                 </sp-tabs>
                             </sp-tab-panel>
                             <sp-tab-panel value="import-preview">
