--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
 
     <script src="./js/dist/spectrum-web-components.js"></script>
-
     <script src="./js/script.js" type="module"></script>
 </head>
 
@@ -19,9 +18,9 @@
         <aside>
             <header><a href="#"><h1>AEM Importer</h1></a></header>
             <nav>
-                <sp-sidenav defaultValue="import.html">
-                    <sp-sidenav-item value="import-express.html" label="Import - Express"></sp-sidenav-item>
-                    <sp-sidenav-item value="import.html" label="Import - Workbench" selected></sp-sidenav-item>
+                <sp-sidenav defaultValue="import-express.html">
+                    <sp-sidenav-item value="import-express.html" label="Import - Express" selected></sp-sidenav-item>
+                    <sp-sidenav-item value="import.html" label="Import - Workbench"></sp-sidenav-item>
                     <sp-sidenav-item value="import-bulk.html" label="Import - Bulk"></sp-sidenav-item>
                     <sp-sidenav-item value="crawl.html" label="Crawl"></sp-sidenav-item>
                     <sp-sidenav-item value="inspect.html" label="Eyedropper"></sp-sidenav-item>
@@ -37,7 +36,7 @@
         </aside>
         <!-- MAIN CONTENT -->
         <main>
-            <iframe src="import-express.html"></iframe>
+            <iframe src="./import-express.html"></iframe>
         </main>
         <div id="alert-container"></div>
     </sp-theme>
