--- a/import-express.html
+++ b/import-express.html
@@ -75,12 +75,16 @@
                                         <sp-checkbox class="option-field" id="import-scroll-to-bottom" checked>
                                             Scroll to bottom
                                         </sp-checkbox>
-                                        <sp-checkbox class="option-field" id="import-detect-on-load" checked>
-                                            Detect Sections when page loads
-                                        </sp-checkbox>
 
                                         <sp-field-label for="import-custom-headers">Custom headers</sp-field-label>
                                         <sp-textfield class="option-field" id="import-custom-headers" multiline placeholder="Define your custom headers as a JSON object with key/value (header name/header value)"></sp-textfield>
+                                    </div>
+                                </sp-accordion-item>
+                                <sp-accordion-item label="Detect Options">
+                                    <div>
+                                        <sp-checkbox class="option-field" id="import-detect-on-load" checked>
+                                            Detect Sections when page loads
+                                        </sp-checkbox>
                                     </div>
                                 </sp-accordion-item>
                             </sp-accordion>
