SITES-22726 Click detection - Creating a selector without a BP-Detector

--- a/import-express.html
+++ b/import-express.html
@@ -7,6 +7,7 @@
     <title>Import - Express Transformations</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/import/import.css" />
+    <link rel="stylesheet" href="./css/import/express.css" />
     <link rel="stylesheet" href="./css/import/import-express-customization.css" />
 
     <script src="./js/shared/log.js"></script>
@@ -110,7 +111,7 @@
                                         <h2 id="mapping-click-detection-prompt">Run section detection to activate mapping management.</h2>
                                         <div class="row header hidden">
                                             <h2 id="sec-color">&nbsp;</h2>
-                                            <h2 id="sec-dom-selector">Selector</h2>
+                                            <h2 class="sec-selector-group">Precision / Offset</h2>
                                             <h2 id="sec-dom-mapping">Mapping</h2>
                                             <h2 id="sec-dom-variants">Variants</h2>
                                             <h2>&nbsp;</h2>
