--- a/import-express.html
+++ b/import-express.html
@@ -77,21 +77,18 @@
                                             Scroll to bottom
                                         </sp-checkbox>
 
+                                        <sp-checkbox class="option-field" id="import-detect-on-load" checked>
+                                            Load preview when page loads
+                                        </sp-checkbox>
+
                                         <sp-field-label for="import-custom-headers">Custom headers</sp-field-label>
                                         <sp-textfield class="option-field" id="import-custom-headers" multiline placeholder="Define your custom headers as a JSON object with key/value (header name/header value)"></sp-textfield>
-                                    </div>
-                                </sp-accordion-item>
-                                <sp-accordion-item label="Detect Options">
-                                    <div>
-                                        <sp-checkbox class="option-field" id="import-detect-on-load" checked>
-                                            Detect Sections when page loads
-                                        </sp-checkbox>
                                     </div>
                                 </sp-accordion-item>
                             </sp-accordion>
 
                             <sp-button-group>
-                                <sp-button id="detect-sections-button">Detect Sections</sp-button>
+                                <sp-button id="detect-sections-button">Load Preview</sp-button>
                                 <sp-button id="import-doimport-button">Import</sp-button>
                             </sp-button-group>
                         </form>
