--- a/import-express.html
+++ b/import-express.html
@@ -7,6 +7,7 @@
     <title>Import - Express Mapping Tool</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/import/import.css" />
+    <link rel="stylesheet" href="./css/import/free.mappings.css" />
 
     <script src="./js/shared/log.js"></script>
     <script src="./js/dist/spectrum-web-components.js"></script>
@@ -84,6 +85,19 @@
                                     <sp-checkbox class="option-field" id="import-sm-auto-detect">
                                         Auto detect blocks
                                     </sp-checkbox>
+                                    <div style="display: inline-flex; flex-direction: row; gap: 1rem">
+                                        <sp-checkbox class="option-field" id="import-sm-free-selections">
+                                            Free selection
+                                        </sp-checkbox>
+                                        <sp-action-button size="s" quiet style="margin-top: 4px">
+                                            <sp-icon-info slot="icon"></sp-icon-info>
+                                            <sp-tooltip self-managed placement="bottom">
+                                                Free Selection allows you to click anywhere on the previewed page, and craft an acceptable selection for block mapping.
+                                                <br /><br />
+                                                Click 'Detect Sections' to load the preview page and click on the area of interest.
+                                            </sp-tooltip>
+                                        </sp-action-button>
+                                    </div>
                                     <sp-checkbox class="option-field" id="import-sm-use-rules">
                                         Use import rules
                                     </sp-checkbox>
@@ -103,7 +117,7 @@
                         </div>
                     </div>
                     <div class="section-col">
-                        <sp-tabs selected="mapping-editor">
+                        <sp-tabs id="mapping-editor-tabs" selected="mapping-editor">
                             <sp-tab label="Mapping" value="mapping-editor"></sp-tab>
                             <sp-tab label="Preview" value="import-preview"></sp-tab>
                             <sp-tab label="Rules" value="import-rules"></sp-tab>
@@ -112,21 +126,35 @@
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="mapping-editor">
                                 <sp-theme color="light" scale="medium">
-                                    <div id="sm-controls">
-                                        <sp-button-group>
-                                            <sp-button id="sm-add-fragment">Add Fragment</sp-button>
-                                            <sp-action-button size="s" quiet>
-                                                <sp-icon-info slot="icon"></sp-icon-info>
-                                                <sp-tooltip self-managed placement="bottom">
-                                                    A fragment is a part of the page that you want to put in a dedicated document.
-                                                    <br><br>
-                                                    The path of the fragment is the path of the resulting document<br>("/nav" => "/nav.docx").
-                                                </sp-tooltip>
-                                            </sp-action-button>
-                                        </sp-button-group>
-                                    </div>
-                                    <div id="mapping-editor">
+                                    <div id="sm-mapping-fragments-container">
+                                        <div id="sm-controls">
+                                            <sp-button-group>
+                                                <sp-button id="sm-add-fragment">Add Fragment</sp-button>
+                                                <sp-action-button size="s" quiet>
+                                                    <sp-icon-info slot="icon"></sp-icon-info>
+                                                    <sp-tooltip self-managed placement="bottom">
+                                                        A fragment is a part of the page that you want to put in a dedicated document.
+                                                        <br><br>
+                                                        The path of the fragment is the path of the resulting document<br>("/nav" => "/nav.docx").
+                                                    </sp-tooltip>
+                                                </sp-action-button>
+                                            </sp-button-group>
+                                        </div>
                                         <div id="sm-fragments-container">
+                                        </div>
+                                    </div>
+                                    <div id="sm-free-mappings-container" class="hidden">
+                                        <div id="sm-free-mappings-heading">
+                                            <h2 id="mapping-click-detection-prompt">Run section detection to activate mapping management.</h2>
+                                            <div class="row header hidden">
+                                                <h2 class="mapping-color">&nbsp;</h2>
+                                                <h2 class="mapping-selector-group">Precision / Offset</h2>
+                                                <h2 class="mapping-dom-mapping">Mapping</h2>
+                                                <h2 class="mapping-dom-variants">Variants</h2>
+                                                <h2>&nbsp;</h2>
+                                            </div>
+                                        </div>
+                                        <div id="sm-free-mappings-editor">
                                         </div>
                                     </div>
                                 </sp-theme>
