--- a/import-express.html
+++ b/import-express.html
@@ -87,6 +87,12 @@
                             <sp-button-group>
                                 <sp-button id="detect-sections-button">Load Preview</sp-button>
                                 <sp-button id="import-doimport-button">Import</sp-button>
+                                <sp-button disabled id="import-automap-button">
+                                    Auto Map
+                                    <sp-tooltip self-managed>
+                                        Automatically attempt to map common areas.
+                                    </sp-tooltip>
+                                </sp-button>
                             </sp-button-group>
                         </form>
                         <span id="folder-name"></span>
