Exclusions - expand what to exclude - include helix-importer changes

--- a/import-express.html
+++ b/import-express.html
@@ -187,13 +187,13 @@
                                                                 Add an exclusion row
                                                             </sp-tooltip>
                                                         </sp-button>
-                                                        <sp-button id="exclusions-display-none" variant="accent" icon-only data-exclusion-selector="{&quot;attribute&quot;:&quot;style&quot;,&quot;property&quot;:&quot;display&quot;,&quot;value&quot;:&quot;none&quot;}">
+                                                        <sp-button id="exclusions-display-none" variant="accent" data-exclusion-selector="{&quot;attribute&quot;:&quot;style&quot;,&quot;property&quot;:&quot;display&quot;,&quot;value&quot;:&quot;none&quot;}">
                                                             No Display
                                                             <sp-tooltip self-managed>
                                                                 Add a mapping to exclude all elements with a display:none style.
                                                             </sp-tooltip>
                                                         </sp-button>
-                                                        <sp-button id="exclusions-no-modals" variant="accent" icon-only data-exclusion-selector="{&quot;attribute&quot;:&quot;class&quot;,&quot;property&quot;:&quot;-&quot;,&quot;value&quot;:&quot;modal&quot;}">
+                                                        <sp-button id="exclusions-no-modals" variant="accent" data-exclusion-selector="{&quot;attribute&quot;:&quot;class&quot;,&quot;property&quot;:&quot;-&quot;,&quot;value&quot;:&quot;modal&quot;}">
                                                            Modal
                                                             <sp-tooltip self-managed>
                                                                 Add a template to exclude all modal with a class containing 'modal'. Edit to match your importing needs.
