--- a/import-bulk.html
+++ b/import-bulk.html
@@ -73,6 +73,13 @@
                                             Scroll to bottom
                                         </sp-checkbox>
 
+                                        <sp-checkbox class="option-field" id="import-use-service">
+                                            Use Import Service
+                                        </sp-checkbox>
+
+                                        <sp-field-label for="import-api-key" required>API Key</sp-field-label>
+                                        <sp-textfield class="option-field" id="import-api-key"></sp-textfield>
+
                                         <sp-field-label for="import-custom-headers">Custom headers</sp-field-label>
                                         <sp-textfield class="option-field" id="import-custom-headers" multiline placeholder="Define your custom headers as a JSON object with key/value (header name/header value)"></sp-textfield>
                                     </div>
