feat: Import Assistant
- redesign to support assistant AI capabilities
- introduce preact
- add top nav
- modularize `import.ui.js`

--- a/import-bulk.html
+++ b/import-bulk.html
@@ -33,7 +33,7 @@
                     <div class="section-col">
                         <form class="import-form">
                             <sp-field-label for="import-urls" required>URLs</sp-field-label>
-                            <sp-textfield class="option-field" multiline id="import-urls">
+                            <sp-textfield class="option-field" multiline grows id="import-urls">
                                 <sp-help-text slot="help-text">https://www.example.com/a<br>https://www.example.com/b</sp-help-text>
                                 <sp-help-text slot="negative-help-text">Please enter valid URLs.</sp-help-text>
                             </sp-textfield>
