feat: Import Assistant

--- a/import.html
+++ b/import.html
@@ -111,7 +111,9 @@
                             <sp-tab label="HTML" value="import-html"></sp-tab>
                             <div id="import-file-picker-container"></div>
                             <sp-tab-panel value="import-preview">
-                                <div id="import-markdown-preview"></div>
+                                <sp-theme color="light">
+                                    <div id="import-markdown-preview"></div>
+                                </sp-theme>
                             </sp-tab-panel>
                             <sp-tab-panel value="import-markdown">
                                 <div data-panel="source">
